# axum-001

./: Cargo.toml  justfile  tailwind.config.js
assets/: app.css
src/: index.rs  main.rs  rest.rs  schema.rs
src/rest/: components.rs
